# violet

./: .bazelignore  .bazelrc  .buildifier.json  .clang-format  .clang-tidy  .clangd  .envrc  .gitignore  .noeldoc.yml  .violet-version  BUILD.bazel  CHANGELOG.md  CMakeLists.txt  DartConfiguration.tcl  LICENSE  MODULE.bazel  README.md  VioletConfig.cmake  WINDOWS.md  bazeldist.tgz  default.nix  dummy.cc  flake.nix  meson.build  meson_options.txt  renovate.json  renovate.jsonc  shell.nix
.agents/: CLAUDE.md  GEMINI.md
.ci/: Dockerfile
.ci/clang/: Dockerfile
.ci/gcc/: Dockerfile
.github/workflows/: CI.yaml  Linux.yaml  Release.yaml  macOS.yaml
.noelware/bzl/: presubmit.toml
buildsystem/bazel/: BUILD.bazel  cc.bzl  version.bzl
buildsystem/bazel/configs/: BUILD.bazel  configs.bzl
buildsystem/cmake/: CXX.cmake  ReadFile.cmake  Utils.cmake  VioletConfig.cmake.in
buildsystem/meson/defines/: meson.build
buildsystem/meson/version/: meson.build
distribution/: meson
docs/: index.md
examples/backtrace/: BUILD.bazel  main.cc
examples/serialization/: BUILD.bazel  main.cc  main.h
examples/sys/: BUILD.bazel  environment.cc
hack/: BUILD.bazel  bazeldist.py  build-ci-images.sh  missing-symbols  stamp.sh
hack/nix/: devshell.sh
hack/pkg-config/: libviolet.pc  libviolet_anyhow.pc  libviolet_experimental.pc  libviolet_experimental_synchronization.pc  libviolet_experimental_threading.pc  libviolet_experimental_time.pc  libviolet_filesystem.pc  libviolet_io.pc  libviolet_io_experimental.pc  libviolet_terminal.pc
hack/translation/: cmake.py  meson.py
include/violet/: BUILD.bazel  Defer.h  Filesystem.h  Iterator.h  Print.h  RefCnt.h  SmolString.h  SourceLocation.h  Strings.h  Subprocess.h  System.h  Traits.h  Violet.h  anyhow.h
lib/pkgconfig/: absl_absl_check.pc  absl_absl_log.pc  absl_absl_vlog_is_on.pc  absl_algorithm.pc  absl_algorithm_container.pc  absl_any.pc  absl_any_invocable.pc  absl_atomic_hook.pc  absl_bad_any_cast.pc  absl_bad_optional_access.pc  absl_base.pc  (+185 more)
nix/: default.nix  devshell.nix
src/: BUILD.bazel  anyhow.cc  panic.cc  strings.cc
tests/: BUILD.bazel  Iterator.test.cc  RefCnt.test.cc  SmolString.test.cc  anyhow.test.cc  strings.test.cc
tests/helper/: BUILD.bazel  PrintArgs.c  PrintEnv.c
tests/helper/runfiles/: BUILD.bazel  Runfiles.cc  Runfiles.h
tests/subprocess/runfiles/: BUILD.bazel
tests/subprocess/runfiles/unix/: hang.cc  print_args.c  print_env.c
tests/subprocess/runfiles/unsupported/: hang.cc  print_env.c
tests/subprocess/runfiles/windows/: hang.cc  print_args.c
tools/: bazeldist  hotpatch-release.py  targets.bzl
violet/: BUILD.bazel  CMakeLists.txt  meson.build  violet.h
violet/anyhow/: meson.build
violet/container/: BUILD.bazel  CMakeLists.txt  Optional.h  Result.h
violet/container/tests/: Optional.test.cpp  Result.test.cpp
violet/core/: BUILD.bazel
violet/events/: BUILD.bazel  CMakeLists.txt
violet/experimental/: BUILD.bazel  meson.build
violet/experimental/language/: BUILD.bazel
violet/experimental/synchronization/: BUILD.bazel  meson.build
violet/experimental/threading/: BUILD.bazel  meson.build
violet/experimental/time/: BUILD.bazel  meson.build
violet/filesystem/: BUILD.bazel  CMakeLists.txt  File.h  Filesystem.h  Path.h  Permissions.h  TempDir.h  meson.build
violet/filesystem/experimental/: BUILD.bazel
violet/filesystem/extensions/: BUILD.bazel  CMakeLists.txt
violet/filesystem/impl/: path.cpp
violet/filesystem/impl/file/: unix.cpp  unsupported.cpp  windows.cpp
violet/filesystem/impl/filesystem/: unix.cpp  unsupported.cpp
violet/filesystem/impl/path/: linux.cpp  macos.cpp  posix.cpp  windows.cpp
violet/filesystem/impl/path/descriptor/: linux.cpp  macos.cpp  unsupported.cpp  windows.cpp
violet/filesystem/impl/permissions/: unix.cpp  unsupported.cpp  windows.cpp
violet/filesystem/impl/tempdir/: unix.cpp
violet/filesystem/tests/: Path.test.cpp
violet/io/: BUILD.bazel  CMakeLists.txt  Descriptor.h  Error.h  Read.h  Stdio.h  Write.h  meson.build
violet/io/experimental/: BUILD.bazel  meson.build
violet/io/impl/: stdio.cpp
violet/io/impl/descriptor/: unix.cpp  unsupported.cpp  windows.cpp
violet/io/impl/error/: unix.cpp  unsupported.cpp  windows.cpp
violet/io/tests/: Error.test.cpp
violet/iter/: BUILD.bazel  Iterator.h  Iterator.test.cpp
violet/iter/adapters/: BUILD.bazel  Enumerate.h  Enumerate.test.cpp  Filter.h  Filter.test.cpp  FilterMap.h  FilterMap.test.cpp  Pipes.h  Pipes.test.cpp
violet/iterator/: BUILD.bazel  CMakeLists.txt
violet/memory/: BUILD.bazel  Memory.h
violet/networking/: CMakeLists.txt
violet/networking/ip/: BUILD.bazel  CMakeLists.txt
violet/networking/socket/: CMakeLists.txt
violet/numeric/: BUILD.bazel  CMakeLists.txt
violet/protobuf/: BUILD.bazel  Traits.h
violet/serialization/: BUILD.bazel  Metadata.h  README.md
violet/serializationv1/: BUILD.bazel  Descriptor.h  Deserializable.h  Error.h  Serializable.h  Serializer.h  Type.h
violet/serializationv1/support/: JsonSchema.h
violet/subprocess/: BUILD.bazel  Stdio.h  Subprocess.h
violet/subprocess/extensions/: BUILD.bazel
violet/subprocess/impl/: stdio.cpp  subprocess.cpp
violet/subprocess/impl/stdio/: unix.cpp  unsupported.cpp
violet/subprocess/impl/subprocess/: unix.cpp
violet/subprocess/pipe_reader/: BUILD.bazel
violet/subprocess/tests/: subprocess_helper.cc
violet/support/: ARef.h  BUILD.bazel  Bitflags.h  CMakeLists.txt  Demangle.h  Ref.h  StringRef.cpp  StringRef.h  Terminal.h  Ulid.cpp  Ulid.h
violet/support/impl/: terminal.cpp
violet/support/impl/terminal/: unix.cpp  unsupported.cpp  windows.cpp
violet/support/numeric/: BUILD.bazel  Traits.h  Traits.test.cpp
violet/support/ref/: BUILD.bazel  Block.h
violet/support/tests/: ARef.test.cpp  Ref.test.cpp  StringRef.test.cpp
violet/sys/: BUILD.bazel  Environment.h  Randomness.h
violet/sys/impl/environment/: unix.cpp  unsupported.cpp  windows.cpp
violet/sys/impl/randomness/: unix.cpp  windows.cpp
violet/system/: BUILD.bazel
violet/terminal/: meson.build
violet/testing/: BUILD.bazel
(+271 files in other folders)
