# 🌺💜 Violet: Extended C++ standard library
# Copyright (c) 2025-2026 Noelware, LLC. <team@noelware.org>, et al.
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

load("@minato//:rcc.bzl", "minato")
load("@rules_cc//cc:defs.bzl", "cc_library")
load("//buildsystem/bazel/flags:flags.bzl", "BOOL_FLAGS")

exports_files(
    ["dummy.cc"],
    visibility = ["//:__subpackages__"],
)

minato(
    name = "rcc",
)

cc_library(
    name = "include_hack",
    includes = ["include"],
    visibility = ["//:__subpackages__"],
)

[alias(
    name = "%s" % name,
    actual = "//buildsystem/bazel/flags:%s" % name,
    visibility = ["//visibility:public"],
) for name in BOOL_FLAGS]

[cc_library(
    name = framework,
    srcs = ["dummy.cc"],
    linkstatic = 0,
    visibility = ["//visibility:public"],
    deps = deps,
) for (framework, deps) in [
    (
        "violet",
        [
            "//violet/container:result",
            "//violet/container:optional",
            "//violet/events:emitter",
            "//violet/iterator:enumerate",
            "//violet/iterator:filter",
            "//violet/iterator:map",
            "//violet/iterator:peekable",
            "//violet/iterator:skip",
            "//violet/iterator:take",
            "//violet/support:bitflags",
            "//violet/support:demangle",
            "//violet/support:terminal",
            "//violet/system",
            "//violet/system:ci",
        ],
    ),
    (
        "experimental",
        [
            "//violet/experimental:smol_string",
            "//violet/experimental:oneof",
            "//violet/experimental/language:typeid",
        ],
    ),
    (
        "experimental_threading",
        [
            "//violet/experimental/threading:cancellation_token",
        ],
    ),
    (
        "filesystem",
        [
            "//violet/filesystem",
            "//violet/filesystem:file",
            "//violet/filesystem:path",
            "//violet/filesystem:permissions",
            "//violet/filesystem:temporary",
            "//violet/filesystem/extensions:xattr",
        ],
    ),
    (
        "io",
        [
            "//violet/io:descriptor",
            "//violet/io:error",
            "//violet/io:read",
            "//violet/io:write",
        ],
    ),
    (
        "io_experimental",
        [
            "//violet/io/experimental:input_stream",
            "//violet/io/experimental:buffered_input_stream",
            "//violet/io/experimental:byte_array_input_stream",
            "//violet/io/experimental:file_input_stream",
            "//violet/io/experimental:stdin_input_stream",
            "//violet/io/experimental:string_input_stream",
            "//violet/io/experimental:output_stream",
            "//violet/io/experimental:buffered_output_stream",
            "//violet/io/experimental:byte_array_output_stream",
            "//violet/io/experimental:file_output_stream",
            "//violet/io/experimental:stdout_output_stream",
            "//violet/io/experimental:stderr_output_stream",
            "//violet/io/experimental:string_output_stream",
        ],
    ),
    (
        "testing",
        [
            "//violet/testing:runfiles",
            "//violet/testing:capture_stream",
        ],
    ),
]]
